--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -1,3 +1,8 @@
+.content {
+    min-width: 440px;
+    overflow-x: auto;
+}
+
 .block {
     display: flex;
     align-items: center;
@@ -12,7 +17,7 @@
 }
 
 .image {
-    background-color: darkgray;
+    background-color: #e7e7e7;
     border-radius: 50%;
     width: 50px;
     height: 50px;
